added background image

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
   <h> BROTHERMAN BILL </h>
   <p> brothermanbill </p>
 
-
-
+<style>
+  body {
+ background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2F651379e2db4c41fc6fa4e8d6c4fd0f58%2Ftenor.gif&f=1&nofb=1);
+ background-color: #cccccc;
+        background-repeat: repeat;
+        background-position: center;
+}
+  </style>
 
 
 
