--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
         background-repeat: repeat;
         background-position: center;
 }
-  </style>
+h {
+  color: #0572ec;
+  font-size: 100x;
+}
+p {
+    font-size: 50px;
+    text-align: center;
+     color: #0078ff
+  }
 
 
 
