--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ p {
     text-align: center;
      color: #0078ff
   }
-  <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
+  
+  <audio src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
 </audio>
 
 
