--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p {
      color: #0078ff
   }
   
-  <audio control> <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
+  <audio controls> <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
 </audio>
 
 
