--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ p {
     text-align: center;
      color: #0078ff
   }
+  </style>
   <body>
        <audio controls>
   <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
