--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@ p {
      color: #0078ff
   }
   </style>
-  <body>
-       <audio controls>
+ <audio controls>
   <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
+  <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
 </audio>
-  </body>
 
 
 </html>
