added lyric block with music

--- a/index.html
+++ b/index.html
@@ -22,6 +22,84 @@ p {
  <audio controls>
   <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
 </audio>
+<center>
+  <h2> BROTHERMAN BILL SINGALONG LYRICS </h2>
+  <p2> The Brotherman Bill is the brother living at the top of the hill
+Dadadadadadada
+The Brotherman Bill is the brother with the Brotherman Bill skills
+Dadadadadadada
+The Brotherman Bill’s got a bottle of Brotherman Bill chill pills
+Dadadadadadada
+The Brotherman Bill put the Terrible Tim at the top of the bill
+Dadadadadadada
 
+Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+The Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+Dadada dada dadadadadadada dadadadadadada
+Dadada dada dadadadadadada dadadadadadada
+
+Brotherman Bill promotes the show you know the room is guaranteed to be filled
+Dadadadadadada
+So many people in the audience I hope none of you people get killed
+Dadadadadadada
+The Brotherman Bill makes other producers look like they’re imbeciles
+Dadadadadadada
+The Brotherman Bill makes so much paper his face should be on a bill
+Dadadadadadada
+
+Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+The Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+Dadada dada dadadadadadada dadadadadadada
+Dadada dada dadadadadadada dadadadadadada
+
+Brotherman Bill has the thrills instilled that Brotherman Bill built
+Dadadadadadada
+Brotherman Bill never will, no frills, Brotherman Bill ills
+Dadadadadadada
+Brotherman Bill breaks this down like an anvil, Brotherman Bill will
+Dadadadadadada
+The Brotherman Bill production get you higher than an alcohol still
+Dadadadadadada
+
+Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+The Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+Dadada dada dadadadadadada dadadadadadada
+Dadada dada dadadadadadada dadadadadadada
+
+The Brotherman Bill is the brother living at the top of the hill
+Dadadadadadada
+The Brotherman Bill is the brother with the Brotherman Bill skills
+Dadadadadadada
+The Brotherman Bill’s got a bottle of Brotherman Bill chill pills
+Dadadadadadada
+The Brotherman Bill put the Terrible Tim at the top of the bill
+Dadadadadadada
+    
+Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+The Brotherman Bill, Brotherman Bill, Brotherman Bill
+Dadadadadadada
+Dadada dada dadadadadadada da dadadadadada
+Dadada dada dadadadadadada da dadadadadada
+Dadada dada dadadadadadada da dadadadadada
+    Dadada dada dadadadada da </p2>
+  <style>
+    body { 
+h2 {
+  color: #0572ec;
+  font-size: 100x;
+}
+p2 {
+    font-size: 50px;
+     color: #0078ff;
+  }
+  </style>
+  </center>
 
 </html>
