hopefully set all lyrics to lists

--- a/index.html
+++ b/index.html
@@ -24,109 +24,76 @@ p {
 </audio>
 <center>
   <h2> BROTHERMAN BILL SINGALONG LYRICS </h2>
-  <p2> The Brotherman Bill is the brother living at the top of the hill
+  <pre>
+The Brotherman Bill is the brother living at the top of the hill
 Dadadadadadada
 The Brotherman Bill is the brother with the Brotherman Bill skills
 Dadadadadadada
 The Brotherman Bill’s got a bottle of Brotherman Bill chill pills
 Dadadadadadada
 The Brotherman Bill put the Terrible Tim at the top of the bill
-    Dadadadadadada </p2>
+Dadadadadadada
 
-<p3> Brotherman Bill, Brotherman Bill, Brotherman Bill
+Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 The Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 Dadada dada dadadadadadada dadadadadadada
-  Dadada dada dadadadadadada dadadadadadada </p3>
+Dadada dada dadadadadadada dadadadadadada 
 
-<p4> Brotherman Bill promotes the show you know the room is guaranteed to be filled
+Brotherman Bill promotes the show you know the room is guaranteed to be filled
 Dadadadadadada
 So many people in the audience I hope none of you people get killed
 Dadadadadadada
 The Brotherman Bill makes other producers look like they’re imbeciles
 Dadadadadadada
 The Brotherman Bill makes so much paper his face should be on a bill
-  Dadadadadadada </p4>
+Dadadadadadada
 
-<p5> Brotherman Bill, Brotherman Bill, Brotherman Bill
+Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 The Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 Dadada dada dadadadadadada dadadadadadada
-  Dadada dada dadadadadadada dadadadadadada </p5>
+Dadada dada dadadadadadada dadadadadadada
 
-<p6> Brotherman Bill has the thrills instilled that Brotherman Bill built
+Brotherman Bill has the thrills instilled that Brotherman Bill built
 Dadadadadadada
 Brotherman Bill never will, no frills, Brotherman Bill ills
 Dadadadadadada
 Brotherman Bill breaks this down like an anvil, Brotherman Bill will
 Dadadadadadada
 The Brotherman Bill production get you higher than an alcohol still
-  Dadadadadadada </p6>
+Dadadadadadada
 
-<p7> Brotherman Bill, Brotherman Bill, Brotherman Bill
+Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 The Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 Dadada dada dadadadadadada dadadadadadada
-Dadada dada dadadadadadada dadadadadadada </p7>
+Dadada dada dadadadadadada dadadadadadada
 
-<p8> The Brotherman Bill is the brother living at the top of the hill
+The Brotherman Bill is the brother living at the top of the hill
 Dadadadadadada
 The Brotherman Bill is the brother with the Brotherman Bill skills
 Dadadadadadada
 The Brotherman Bill’s got a bottle of Brotherman Bill chill pills
 Dadadadadadada
 The Brotherman Bill put the Terrible Tim at the top of the bill
-  Dadadadadadada </p8>
+Dadadadadadada
     
-<p9> Brotherman Bill, Brotherman Bill, Brotherman Bill
+Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 The Brotherman Bill, Brotherman Bill, Brotherman Bill
 Dadadadadadada
 Dadada dada dadadadadadada da dadadadadada
 Dadada dada dadadadadadada da dadadadadada
 Dadada dada dadadadadadada da dadadadadada
-  Dadada dada dadadadada da </p9>
+Dadada dada dadadadada da
+</pre>
   <style>
-    body { 
-h2 {
-  color: #0572ec;
-  font-size: 150x;
-}
-p2 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p3 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p4 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p5 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p6 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p7 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p8 {
-    font-size: 100px;
-     color: #0078ff;
-  }
-p9 {
-    font-size: 100px;
-     color: #0078ff;
-  }
+   pre {
+     font-size: 80px
     }
   </style>
   </center>
