set lyrics to left

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ p {
  <audio controls>
   <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
 </audio>
-<center>
   <h2> BROTHERMAN BILL SINGALONG LYRICS </h2>
   <pre>
 The Brotherman Bill is the brother living at the top of the hill
@@ -93,12 +92,12 @@ Dadada dada dadadadada da
 </pre>
   <style>
    pre {
-     font-size: 40px
+     font-size: 40px;
     }
     h2 {
-      font-size: 60px
+      font-size: 60px;
+        text-align: center;
     }
   </style>
-  </center>
 
 </html>
