--- a/index.html
+++ b/index.html
@@ -1,103 +1,6 @@
 <html>
-  <h> BROTHERMAN BILL </h>
-  <p> brothermanbill </p>
-
-<style>
-  body {
- background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2F651379e2db4c41fc6fa4e8d6c4fd0f58%2Ftenor.gif&f=1&nofb=1);
- background-color: #cccccc;
-        background-repeat: repeat;
-        background-position: center;
-}
-h {
-  color: #0572ec;
-  font-size: 100x;
-}
-p {
-    font-size: 50px;
-    text-align: center;
-     color: #0078ff
-  }
-  </style>
- <audio controls>
-  <source src="https://cdn.discordapp.com/attachments/234153810904350730/806746259363856404/BrothermanBill_karaoke.mp3" type="audio/mpeg">
-</audio>
-  <h2> BROTHERMAN BILL SINGALONG LYRICS </h2>
-  <pre>
-The Brotherman Bill is the brother living at the top of the hill
-Dadadadadadada
-The Brotherman Bill is the brother with the Brotherman Bill skills
-Dadadadadadada
-The Brotherman Bill’s got a bottle of Brotherman Bill chill pills
-Dadadadadadada
-The Brotherman Bill put the Terrible Tim at the top of the bill
-Dadadadadadada
-
-Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-The Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-Dadada dada dadadadadadada dadadadadadada
-Dadada dada dadadadadadada dadadadadadada 
-
-Brotherman Bill promotes the show you know the room is guaranteed to be filled
-Dadadadadadada
-So many people in the audience I hope none of you people get killed
-Dadadadadadada
-The Brotherman Bill makes other producers look like they’re imbeciles
-Dadadadadadada
-The Brotherman Bill makes so much paper his face should be on a bill
-Dadadadadadada
-
-Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-The Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-Dadada dada dadadadadadada dadadadadadada
-Dadada dada dadadadadadada dadadadadadada
-
-Brotherman Bill has the thrills instilled that Brotherman Bill built
-Dadadadadadada
-Brotherman Bill never will, no frills, Brotherman Bill ills
-Dadadadadadada
-Brotherman Bill breaks this down like an anvil, Brotherman Bill will
-Dadadadadadada
-The Brotherman Bill production get you higher than an alcohol still
-Dadadadadadada
-
-Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-The Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-Dadada dada dadadadadadada dadadadadadada
-Dadada dada dadadadadadada dadadadadadada
-
-The Brotherman Bill is the brother living at the top of the hill
-Dadadadadadada
-The Brotherman Bill is the brother with the Brotherman Bill skills
-Dadadadadadada
-The Brotherman Bill’s got a bottle of Brotherman Bill chill pills
-Dadadadadadada
-The Brotherman Bill put the Terrible Tim at the top of the bill
-Dadadadadadada
-    
-Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-The Brotherman Bill, Brotherman Bill, Brotherman Bill
-Dadadadadadada
-Dadada dada dadadadadadada da dadadadadada
-Dadada dada dadadadadadada da dadadadadada
-Dadada dada dadadadadadada da dadadadadada
-Dadada dada dadadadada da
-</pre>
-  <style>
-   pre {
-     font-size: 40px;
-    }
-    h2 {
-      font-size: 60px;
-        text-align: center;
-    }
-  </style>
-
+  <body>
+    <h> TEMPORARY HOLDING PAGE </h>
+    <a href="noun.html"> WATCH THE OSU STANDARD PP RECORDS </a> 
+  
 </html>
