--- a/noun.html
+++ b/noun.html
@@ -35,7 +35,7 @@
         
       </tr>
       <tr>
-      <td> <a href="https://www.youtube.com/watch?v=DyVFii6gBJ0"> Remote Control [Max Control!] </a></td>
+      <td> <a href="https://www.youtube.com/watch?v=DyVFii6gBJ0"> Remote Control [Max Control!] +HDDT </a></td>
         <td> Cookiezi </td>
         <td> March 29, 2017 </td>
         <td> 817 </td>
@@ -53,7 +53,7 @@
         <td> </td>
       </tr>
           <tr>
-      <td> <a href="https://www.youtube.com/watch?v=DyVFii6gBJ0"> Remote Control [Max Control!] </a></td>
+      <td> <a href="https://www.youtube.com/watch?v=DyVFii6gBJ0"> Remote Control [Max Control!] +HDDT </a></td>
         <td> Cookiezi </td>
         <td> March 29, 2017 </td>
         <td> 817 </td>
