--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   <body>
-    <h> TEMPORARY HOLDING PAGE </h>
-    <a href="noun.html"> WATCH THE OSU STANDARD PP RECORDS </a> 
+  <ul>
+  <li><a href="index.html">HOME</a></li>
+  <li><a href="noun.html">OSU PP RECORDS</a></li>
+</ul>
+<br>
+    <hr>
+    <img src="WebDesignPersonalArtifact.jpg" class="center">
+</hr>
+</br>
   
 </html>
