--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ li a{
   display: block;
   text-decoration: none;
   padding: 15px 40px;
-  color: C95485;
+  color: #C95485;
   font-size: 20px;
   color: #3E5C76;
   float: left;
