--- a/noun.html
+++ b/noun.html
@@ -232,9 +232,9 @@ tr{
   background-color: #F4D6CC;
 }
 .list {
-  position: fixed;
+  position: absolute;
   top: 7px;
-  left: 270px;
+  left: 220px;
   width: 200px;
   color: #F4B860;
 }
@@ -264,7 +264,7 @@ a:hover {
 .just{
   position: absolute;
 top: 820px;
-left: 340px;  
+left: 250px;  
 }
 img {
   border-radius: 4px;
