--- a/noun.html
+++ b/noun.html
@@ -4,6 +4,14 @@
 </head>
 
 <html>
+  <ul>
+  <li><a href="index.html">HOME</a></li>
+  <li><a href="noun.html">OSU PP RECORDS</a></li>
+</ul>
+<br>
+<hr>
+</hr>
+</br>
   <body>
     <center>
     <table>
@@ -270,5 +278,35 @@ img {
   border-radius: 4px;
   
 }
+      ul{
+  list-style-type: none;
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background: #1D2D44;
+  top: 0%;
+  
+}
+li a{
+  display: block;
+  text-decoration: none;
+  padding: 15px 40px;
+  color: #C95485;
+  font-size: 20px;
+  color: #3E5C76;
+  float: left;
+}
+a:visited {
+  color: #0D1321;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: #748CAB;
+  background-color: #F0EBD8;
+  text-decoration: underline;
+}
+      
     </style>
   </html>
