--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
 </br>
 </body>
 <style>
+  ul{
+  list-style-type: none;
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background: #1D2D44;
+  top: 0%;
   
+}
+li a{
+  display: block;
+  text-decoration: none;
+  padding: 15px 40px;
+  color: #C95485;
+  font-size: 20px;
+  color: #3E5C76;
+  float: left;
+}
 a:visited {
   color: #0D1321;
   background-color: transparent;
