--- a/noun.html
+++ b/noun.html
@@ -181,7 +181,7 @@
         <td> 1289 </td>
 </tr>
 <tr class="rebal">
-      <td> HIGH AR AND ZCCURACY PP REBALANCE January 16, 2021 </td>
+      <td> HIGH AR AND ACCURACY PP REBALANCE January 16, 2021 </td>
         <td>  </td>
         <td>  </td>
         <td>  </td>
