--- a/convince/convince.html
+++ b/convince/convince.html
@@ -1,1 +1,41 @@
-
+<html>
+  <head>
+    <title> GO A BUT THEN GO B SIGNITURE TACTIC OF ALEKSIB </title>
+    <link rel="stylesheet" href="convinceStyle.css">
+    
+<ul>
+  <li><a href="index.html">HOME</a></li>
+  <li><a href="main.html">CONVINCE</a></li>
+  
+</ul>
+  <hr>
+  <link rel="icon" href="Aliens Are Real.jpg">
+  </head>
+  
+  <body>
+    
+  <center>
+    <div class="heading">
+    <h1 class="heading"> Aleksib is the greatest IGL in the game CS:GO </h1>
+  </div>
+    </center>
+    <div class="aleksibence1">
+   <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.RrroyxCfxWChDuDf32p9nAHaE7%26pid%3DApi&f=1"> </img>
+    </div>
+    <p class="ence"> Aleksib, an up and coming Finnish player had his major debut on the team ENCE where he led his teamates allu, xSeven, Aerial, and sergej to the finals of the major championship and to their peak world rank of #2 </p>
+  <p class="ence2"> The Finnish scene for CS:GO was pretty barren having only 2 noticable players in allu and suNny, and no Finnish only teams that stood out, that all changed when ENCE shocked the world at the Katowice 2019 Tournament </p>
+  <div class="og1">
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.XNFzUBy18wC_Mq5hPWgZ7wHaEK%26pid%3DApi&f=1">
+    </div>
+  <p class="aleksibenched"> After a while of playing on ENCE, the team made the poor decision to bench Aleksib in favor of the Finnish player suNny, Aleksib along with 2 well known players NBK and V4lde start a CS:GO team with the organization OG picking up the lesser known players mantuu and ISSAA </p>
+  
+  <p class="aleksibnewteam"> On this new team Aleksib was able to work his way back up to the top 10 peaking at rank #6, showing his capability to reach for the stars with any team he's given </p> 
+    <p class="ogpicdesc1"> NBK ISSAA Aleksib v4lde mantuu </p>
+  <div class="astralis1">
+    <img src="https://img-cdn.hltv.org/playerbodyshot/XrOWRACzHSb71Dul1WFXyo.png?ixlib=java-2.1.0&w=400&s=418c18e543618d5c2de30ea34206ed5b"> 
+  </div>
+  <div class="gla1ve">
+  <p> Many people would argue that the worlds best IGL is Astralis' IGL Gla1ve. Gla1ve plays on the current #1 team and has won 4 Major tournaments, 3 back to back including the Katowice 2019 major against ENCE in the grand finals. I still believe Aleksib to be the greatest IGL because Gla1ve works with incredible teamates, possible the best players that have ever touched the game of CS:GO, whereas Aleksib worked with what he had and lead his team to the grand finals of a major. </p>
+  </body>
+  
+  </html>
