--- a/convince/convince.html
+++ b/convince/convince.html
@@ -37,5 +37,53 @@
   <div class="gla1ve">
   <p> Many people would argue that the worlds best IGL is Astralis' IGL Gla1ve. Gla1ve plays on the current #1 team and has won 4 Major tournaments, 3 back to back including the Katowice 2019 major against ENCE in the grand finals. I still believe Aleksib to be the greatest IGL because Gla1ve works with incredible teamates, possible the best players that have ever touched the game of CS:GO, whereas Aleksib worked with what he had and lead his team to the grand finals of a major. </p>
   </body>
+  <style>
+    .ence {
+  width: 6%;
+  position: absolute;
+  top: 25%;
+  left: 30%;
+  color: #;
+}
+.ence2 {
+  position: absolute;
+  width: 7%;
+  top: 25%;
+  left: 63%;
+}
+.aleksibence1 {
+  position: absolute;
+  left: 37%;
+  top: 25%;
+}
+.og1 {
+  position: absolute;
+  left: 37%;
+  top: 90%;
+}
+.aleksibenched {
+  width: 9%;
+  top: 90%;
+  position: absolute;
+  left: 27%;
+}
+.ogpicdesc1 {
+  position: absolute;
+  top: 137%;
+  left: 43%;
+}
+.aleksibnewteam {
+  position: absolute;
+  top: 90%;
+  left: 63%;
+  width: 9%
+}
+.astralis1 {
+position: absolute;
+  top: 150%;
+  left: 40%;
+}
+.gla1ve {
+  </style>
   
   </html>
