added convince to nav bar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <ul>
   <li><a href="index.html">HOME</a></li>
   <li><a href="noun.html">OSU PP RECORDS</a></li>
+   <li><a href="convince.html">CONVINCE</a></li>
 </ul>
 <br>
     <hr>
