--- a/convince/convince.html
+++ b/convince/convince.html
@@ -84,6 +84,11 @@ position: absolute;
   left: 40%;
 }
 .gla1ve {
+  position: absolute;
+  width: 9%;
+  top: 150%;
+  left: 27%;
+}
   </style>
   
   </html>
