--- a/convince/convince.html
+++ b/convince/convince.html
@@ -9,7 +9,7 @@
   
 </ul>
   <hr>
-  <link rel="icon" href="Aliens Are Real.jpg">
+  <link rel="icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.n5gOwTSjvmvs_dlLEdIOMQAAAA%26pid%3DApi&f=1">
   </head>
   
   <body>
