--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="convinceStyle.css">
+  </head>
   <body>
   <ul>
   <li><a href="index.html">HOME</a></li>
