--- a/convince/convince.html
+++ b/convince/convince.html
@@ -5,7 +5,7 @@
     
 <ul>
   <li><a href="index.html">HOME</a></li>
-  <li><a href="main.html">CONVINCE</a></li>
+  <li><a href="convince.html">CONVINCE</a></li>
   
 </ul>
   <hr>
