added more style and text

--- a/convince/convince.html
+++ b/convince/convince.html
@@ -4,16 +4,16 @@
     <link rel="stylesheet" href="convinceStyle.css">
     
 <ul>
-  <li><a href="../index.html">HOME</a></li>
-  <li><a href="convince.html">CONVINCE</a></li>
+  <li><a href="index.html">HOME</a></li>
+  <li><a href="main.html">CONVINCE</a></li>
   
 </ul>
   <hr>
-  <link rel="icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.n5gOwTSjvmvs_dlLEdIOMQAAAA%26pid%3DApi&f=1">
+  <link rel="icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Eg_oqQpNdNsmAZFmLNOYkwHaHa%26pid%3DApi&f=1">
   </head>
   
   <body>
-    
+    <div class="words">
   <center>
     <div class="heading">
     <h1 class="heading"> Aleksib is the greatest IGL in the game CS:GO </h1>
@@ -36,7 +36,12 @@
   </div>
   <div class="gla1ve">
   <p> Many people would argue that the worlds best IGL is Astralis' IGL Gla1ve. Gla1ve plays on the current #1 team and has won 4 Major tournaments, 3 back to back including the Katowice 2019 major against ENCE in the grand finals. I still believe Aleksib to be the greatest IGL because Gla1ve works with incredible teamates, possible the best players that have ever touched the game of CS:GO, whereas Aleksib worked with what he had and lead his team to the grand finals of a major. </p>
+    </div>
+    <div class="aleksibgames">
+      <p> To see Aleksib's upcoming games and to cheer on OG you can click this link to see OG's upcoming events </p>
+    </div>
   </body>
+ 
   <style>
     .ence {
   width: 6%;
@@ -88,6 +93,16 @@ position: absolute;
   width: 9%;
   top: 150%;
   left: 27%;
+}
+    .words {
+  font-family: verdana;
+  color: #C4A287;
+}
+.aleksibgames {
+  position: absolute;
+  width: 20%;
+  left: 42%;
+  top: 230%;
 }
   </style>
   
