--- a/convince/convince.html
+++ b/convince/convince.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="convinceStyle.css">
     
 <ul>
-  <li><a href="index.html">HOME</a></li>
+  <li><a href="../index.html">HOME</a></li>
   <li><a href="main.html">CONVINCE</a></li>
   
 </ul>
