--- a/convince/convince.html
+++ b/convince/convince.html
@@ -39,7 +39,7 @@
     </div>
     <div class="aleksibgames">
       <p> To see Aleksib's upcoming games and to cheer on OG you can click this link to see OG's upcoming events </p>
-            <a href="hhttps://www.hltv.org/team/10503/og">OG's HLTV Page!</a>
+            <a href="https://www.hltv.org/team/10503/og">OG's HLTV Page!</a>
     </div>
   </body>
  
