added food page to nav bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <ul>
   <li><a href="index.html">HOME</a></li>
   <li><a href="noun.html">OSU PP RECORDS</a></li>
-   <li><a href="convince/convince.html">CONVINCE</a></li>
+  <li><a href="convince/convince.html">CONVINCE</a></li>
+  <li><a href="food/main.html">CHOCOMINT ICE</a></li>
 </ul>
 <br>
     <hr>
