added menu to nav bar

--- a/food/main.html
+++ b/food/main.html
@@ -5,7 +5,7 @@
 <ul>
   <li><a href="../index.html">CREATOR'S PAGE</a></li>
   <li><a href="main.html">HOME</a></li>
-  <li><a href="main.html">MENU</a></li>
+  <li><a href="menu.html">MENU</a></li>
   
 </ul>
   </head>
