transfered from codepen

--- a/food/menu.html
+++ b/food/menu.html
@@ -1,1 +1,43 @@
+<html>
+  <head>
+    <title> CHOCOMINT ICE ICE ICE </title>
+    <link rel="stylesheet" href="foodstyle.css">
+    
+<ul>
+  <li><a href="../index.html">CREATOR'S PAGE</a></li>
+  <li><a href="main.html">HOME</a></li>
+  <li><a href="main.html">MENU</a></li>
+  
+</ul>
+  </head>
+  <br>
+  <br>
+  <body>
+    <center>
+      <a href="https://www.youtube.com/watch?v=pfkBYHFZAt8&t"><img src="icecream.png"></img></a>
+<div class="wrapper">
+  <div class="menu"> <img src="https://cdn.discordapp.com/attachments/824374682458652744/824474664624717834/unknown.png"></img> </div>
+  <div class="menu"> <img src="https://cdn.discordapp.com/attachments/824374682458652744/824474730055860274/unknown.png"</img> </div>
+  <div class="menu"> <img src="https://cdn.discordapp.com/attachments/824374682458652744/824475146449584128/unknown.png"</img> </div>
+  <div class="menu"> <img src="https://cdn.discordapp.com/attachments/824374682458652744/824475393514930207/unknown.png" width="400" height="500"></img> </div>
+   </center>
+  </body>
+<style>
+  body {
+  background-color: #AAD9EB;
+}
+div.wrapper {
+  width: 100%;
+  background-color: #AAD9EB;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+}
 
+.menu {
+  justify-content: center;
+  background-color: #CAE9EB;
+  border: solid #91CDE5 2px;
+}
+</style>
+</html>
