made logo image into link for menu

--- a/food/main.html
+++ b/food/main.html
@@ -12,7 +12,7 @@
   <body>
     <center>
       <div class="l727">
-      <img src="icecream.png"> </img>
+      <a href="menu.html"><img src="icecream.png"></img></a>
       </div>
     
     
