--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <li><a href="noun.html">OSU PP RECORDS</a></li>
   <li><a href="convince/convince.html">CONVINCE</a></li>
   <li><a href="food/main.html">CHOCOMINT ICE</a></li>
+  <li><a href="event/main.html">FINALS</a></li>
 </ul>
 <br>
     <hr>
