added creator pages to navbar

--- a/team/main.html
+++ b/team/main.html
@@ -188,19 +188,19 @@ padding: 15px;
 <body>
 
 <div class="navbar">
-  <a href="___">HOME</a>
+  <a href="https://wvcs.github.io/index-sotarks727/team/main.html">HOME</a>
   <a href="___">CHARACHTERS</a>
-  <a href="___"> MOVIES </a>
-  <a href="___"> BACKGROUND INFO </a>
+  <a href="https://wvcs.github.io/index-Nicholasy1/team/mytab.html"> MOVIES </a>
+  <a href="https://wvcs.github.io/index-jsmith5s/team/avengers.html"> BACKGROUND INFO </a>
   <div class="dropdown">
     <button class="dropbtn">CREATORS
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Nicholas</a>
-      <a href="#">Scott</a>
-      <a href="#">Jordan</a>
-      <a href="#">Spencer</a>
+      <a href="https://wvcs.github.io/index-Nicholasy1/team/">Nicholas</a>
+      <a href="https://wvcs.github.io/index-sotarks727/">Scott</a>
+      <a href="https://wvcs.github.io/index-jsmith5s/">Jordan</a>
+      <a href="https://wvcs.github.io/index-Spencerh1/">Spencer</a>
     </div>
   </div>
 </div>
