added team page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <li><a href="convince/convince.html">CONVINCE</a></li>
   <li><a href="food/main.html">CHOCOMINT ICE</a></li>
   <li><a href="event/main.html">FINALS</a></li>
+  <li> <a href="team/main.html">TEAM</a></li>
 </ul>
 <br>
     <hr>
