--- a/team/main.html
+++ b/team/main.html
@@ -187,18 +187,18 @@ padding: 15px;
 </head>
 <body>
 
-<div class="navbar">
+ <div class="navbar">
   <a href="https://wvcs.github.io/index-sotarks727/team/main.html">HOME</a>
   <a href="___">CHARACHTERS</a>
-  <a href="https://wvcs.github.io/index-Nicholasy1/team/mytab.html"> MOVIES </a>
+  <a href="mytab.html"> MOVIES </a>
   <a href="https://wvcs.github.io/index-jsmith5s/team/avengers.html"> BACKGROUND INFO </a>
   <div class="dropdown">
     <button class="dropbtn">CREATORS
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://wvcs.github.io/index-Nicholasy1/team/">Nicholas</a>
-      <a href="https://wvcs.github.io/index-sotarks727/">Scott</a>
+      <a href="https://wvcs.github.io/index-Nicholasy1/index.html">Nicholas</a>
+      <a href="https://wvcs.github.io/index-sotarks727/index.html">Scott</a>
       <a href="https://wvcs.github.io/index-jsmith5s/">Jordan</a>
       <a href="https://wvcs.github.io/index-Spencerh1/">Spencer</a>
     </div>
