added 1 more page

--- a/team/main.html
+++ b/team/main.html
@@ -191,7 +191,7 @@ padding: 15px;
 
  <div class="navbar">
   <a href="https://wvcs.github.io/index-sotarks727/team/main.html">HOME</a>
-  <a href="___">CHARACHTERS</a>
+  <a href="https://wvcs.github.io/index-Spencerh1/Avengers.html">CHARACHTERS</a>
   <a href="https://wvcs.github.io/index-Nicholasy1/team/mytab.html"> MOVIES </a>
   <a href="https://wvcs.github.io/index-jsmith5s/team/avengers.html"> BACKGROUND INFO </a>
   <div class="dropdown">
