--- a/team/main.html
+++ b/team/main.html
@@ -1,14 +1,13 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-<body>
-
+    <title> The Avengers </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title> The Avengers </title>
  <div class="navbar">
   <a href="https://wvcs.github.io/index-sotarks727/team/main.html">HOME</a>
   <a href="https://wvcs.github.io/index-Spencerh1/Avengers.html">CHARACHTERS</a>
-  <a href="https://wvcs.github.io/index-Nicholasy1/team/mytab.html"> MOVIES </a>
+  <a href="mytab.html"> MOVIES </a>
   <a href="https://wvcs.github.io/index-jsmith5s/team/avengers.html"> BACKGROUND INFO </a>
   <div class="dropdown">
     <button class="dropbtn">CREATORS
