--- a/team/main.html
+++ b/team/main.html
@@ -21,6 +21,8 @@
     </div>
   </div>
 </div>
+    </head>
+    <hr>
     <div id="slider">
    <input type="radio" name="slider" id="slide1" checked>
    <input type="radio" name="slider" id="slide2">
