--- a/park/main.html
+++ b/park/main.html
@@ -13,8 +13,8 @@
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
  <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="https://wvcs.github.io/index-sotarks727/">Scott's Index</a>
-  <a href="https://wvcs.github.io/index-Ethan777Zhou/">Ethan's Index</a>
+  <a href="#">Scott's Index</a>
+  <a href="#">Ethan's Index</a>
 </div>
 
   <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.ebmeyercharter.com%2Fwp-content%2Fuploads%2F2016%2F11%2Fsixflags.jpg&f=1&nofb=1"> </img>
@@ -31,8 +31,9 @@
 </div>
   <button onclick="topFunction()" id="takemetothetop"> <img src="https://cdn.betterttv.net/emote/6004e7216c75a765d4630aae/3x"></img </button>
   </body>
-  </div>  
+  </div>
   </body>
+
 <style>
   .sidenav {
   height: 100%;
@@ -170,7 +171,7 @@
 }
 </style>
 <script>
-  function openNav() {
+function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
 }
 
