--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <li><a href="food/main.html">CHOCOMINT ICE</a></li>
   <li><a href="event/main.html">FINALS</a></li>
   <li> <a href="team/main.html">TEAM</a></li>
-    <li. <a href="park/main.html">AMUSEMENT PARK</a></li>
+    <li> <a href="park/main.html">AMUSEMENT PARK</a></li>
 </ul>
 <br>
     <hr>
