--- a/park/main.html
+++ b/park/main.html
@@ -4,37 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>727 Flags</title>
-  </head>
-  <body>
-    <h2>727 Flags</h2>
-<p>COME RIDE THE FAMOUS BLUE ZENTIH</p>
-    
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
- <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Scott's Index</a>
-  <a href="#">Ethan's Index</a>
-</div>
-
-  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.ebmeyercharter.com%2Fwp-content%2Fuploads%2F2016%2F11%2Fsixflags.jpg&f=1&nofb=1"> </img>
-    <br>
-
-</div>
-  <center>
-  <img id="myImg" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.travelhackergirl.com%2Fwp-content%2Fuploads%2F2013%2F06%2FP7051001.jpg&f=1&nofb=1" alt="Blue Zenith" style="width:100%;max-width:727px">
-  </center>
-<div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-</div>
-  <button onclick="topFunction()" id="takemetothetop"> <img src="https://cdn.betterttv.net/emote/6004e7216c75a765d4630aae/3x"></img </button>
-  </body>
-  </div>
-  </body>
-
-<style>
+  <title> 727 Flags </title>
+  <style>
   .sidenav {
   height: 100%;
   width: 0;
@@ -170,6 +141,32 @@
   border-radius: 2px;
 }
 </style>
+  </head>
+  <body>
+    <h2>727 Flags</h2>
+<p>COME RIDE THE FAMOUS BLUE ZENTIH</p>
+    
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+ <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">Scott's Index</a>
+  <a href="#">Ethan's Index</a>
+</div>
+
+  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.ebmeyercharter.com%2Fwp-content%2Fuploads%2F2016%2F11%2Fsixflags.jpg&f=1&nofb=1"> </img>
+    <br>
+
+</div>
+  <center>
+  <img id="myImg" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.travelhackergirl.com%2Fwp-content%2Fuploads%2F2013%2F06%2FP7051001.jpg&f=1&nofb=1" alt="Blue Zenith" style="width:100%;max-width:727px">
+  </center>
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+  <button onclick="topFunction()" id="takemetothetop"> <img src="https://cdn.betterttv.net/emote/6004e7216c75a765d4630aae/3x"></img </button>
+  </div>
 <script>
 function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
@@ -209,5 +206,6 @@ function hideFunction() {
     document.getElementById("takemetothetop").style.display = "none";
   }
 }
-  </style>
+  </script>
+</body>
   </html>
