--- a/brand/main.html
+++ b/brand/main.html
@@ -247,6 +247,7 @@ function hideFunction() {
     document.getElementById("takemetothetop").style.display = "none";
   }
 } 
+window.alert("give me your money paypal: nguyenscott0@gmail.com (dont actually)");
 </script>
 </body>
 </html>
