linked to index

--- a/brand/main.html
+++ b/brand/main.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="navbar">  
-<a href="#home"><img src="https://cdn.discordapp.com/attachments/812153877821521970/846616446150115338/shop.png" </img></a>
+<a href="https://wvcs.github.io/index-sotarks727/"><img src="https://cdn.discordapp.com/attachments/812153877821521970/846616446150115338/shop.png" </img></a>
 <a href="https://www.amazon.com/gp/cart/view.html?ref_=nav_cart"> Checkout <a>
   <div class="dropdown">
     <button class="dropbtn">Products 
