--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <li><a href="event/main.html">FINALS</a></li>
   <li> <a href="team/main.html">TEAM</a></li>
     <li> <a href="park/main.html">PARK</a></li>
-    </li> <a href="brand/main.html">BRAND</a></li>
+    <li> <a href="brand/main.html">BRAND</a></li>
 </ul>
 <br>
     <hr>
