--- a/redo/main.html
+++ b/redo/main.html
@@ -21,7 +21,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 6</div>
-  <div class="text">HONESTY [DISHONEST] +HDHR	Karthy	September 17, 2018	941</div>
+  <div class="text">HONESTY [DISHONEST] +HDHR	Karthy	September 17, 2018	941 (slight fowl language at end)</div>
   <iframe width="854" height="480" src="https://www.youtube.com/embed/S2fBFKbFolM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
   
