--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <li> <a href="team/main.html">TEAM</a></li>
     <li> <a href="park/main.html">PARK</a></li>
     <li> <a href="brand/main.html">BRAND</a></li>
+    <li> <a href="final/main.html">SKI</a></li>
 </ul>
 <br>
     <hr>
